--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>NEM Offline Signer</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+<table>
+<tr><td>signer private key:</td><td><input type="text" id="pk" size="64"/></td></tr>
+<tr><td>recipient:</td><td><input type="text" id="recipient" size="64"/></td></tr>
+<tr><td>amount:</td><td><input type="text" id="amount"</td></tr>
+<tr><td>message:</td><td>
+    <textarea id="msg"></textarea>
+</td></tr>
+<tr><td>Multisig public key:</td><td><input type="text" id="msig_pubkey" size="64"/></td></tr>
+<tr><td><button id="send">SEND</button></td></td></tr>
+</table>
+
+<hr/>
+<div style="width:100%;">
+    <div id="result" style="width:75%;word-wrap:break-word;">
+    </div>
+    <canvas id="canvas">
+    </canvas>
+</div>
 
     <script>
       // You can also require other files to run in this process
